# recipes

./: .coverage  .coveragerc  .env-example  .gitignore  pyproject.toml  pytest.ini
authors/: urls.py  views.py
authors/templates/authors/pages/: register_view.html
base_templates/global/: base.html  home.html
core/: settings.py  urls.py
projeto/: settings.py  urls.py
recipes/: admin.py  models.py  tests.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_alter_recipe_author_alter_recipe_category_and_more.py  0003_alter_recipe_cover.py  0004_alter_recipe_slug.py
recipes/static/recipes/: styles.css
recipes/static/recipes/css/: styles.css
recipes/templates/recipes/: home.html
recipes/templates/recipes/pages/: category.html  home.html  recipe-view.html  search-view.html
recipes/templates/recipes/partials/: footer.html  head.html  header.html  pagination.html  recipe.html  search.html
recipes/tests/: test_category_model.py  test_recipe_base.py  test_recipe_category_view.py  test_recipe_detail_view.py  test_recipe_home_views.py  test_recipe_model.py  test_recipe_search_view.py  test_recipe_urls.py  test_recipe_views.py
static/recipes/: styles.css
utils/: pagination.py  test_pagination.py
utils/recipes/: factory.py
