[tool.poetry]
name = "curso-django"
version = "0.1.0"
description = ""
authors = ["Isaias Almeida <isaiasalmeida319@gmail.com>"]
readme = "README.md"
packages = [{include = "curso_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
