[tool.poetry]
name = "recipes"
version = "0.1.0"
description = ""
authors = ["Isaias Almeida <isaiasalmeida319@gmail.com>"]
readme = "README.md"
packages = [{include = "recipes"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.15"
faker = "^19.3.0"
pillow = "^10.0.0"
pytest = "^7.4.0"
pytest-django = "^4.5.2"
pytest-watch = "^4.2.0"
parameterized = "^0.9.0"
coverage = "^7.4.0"
commitizen = "^3.13.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
